<resources>
    <!--ScratchJr-->
    <string name="share_mimetype">application/x-scratchjr-project</string>

    <string name="app_name">Code Land2</string>
    <string name="action_demo_android">Android</string>
    <string name="action_demo_lacey_curves">Lacey Curves</string>
    <string name="action_demo_paint_strokes">Paint Strokes</string>
    <string name="knowledge_notebook">Knowledge Notebook</string>
    <string name="enlighten_module_english">English</string>
    <string name="enlighten_module_animal">Animals</string>
    <string name="enlighten_module_poetry">Poetry</string>
    <string name="enlighten_module_sanzijing">Sanzijing</string>
    <string name="enlighten_module_celebrity">Celebrity History</string>
    <string name="gamebase_turtle">Little Car</string>
    <string name="button_continue">Continue</string>
    <string name="button_again">Retry</string>
    <string name="button_exit">Exit</string>
    <string name="button_music">Music</string>
    <string name="button_help">Help</string>
    <string name="coding_output_text">Output Text</string>
    <string name="coding_math">Math</string>
    <string name="coding_loop">Loop</string>
    <string name="coding_variable">Variable</string>
    <string name="coding_logic">Logic</string>
    <string name="coding_array">Array</string>
    <string name="coding_function">Function</string>


    <string name="code_javascript">JavaScript</string>
    <string name="code_python">Python</string>
    <string name="code_php">PHP</string>
    <string name="code_lua">Lua</string>
    <string name="code_dart">Dart</string>


    <string name="program_coding"> Programming learning </string>
    <string name="program_code"> Code learning </string>


    <string name="coding_code_land">Code Land 2</string>
    <string name="coding_code_land_load">Load the selected item</string>

    <string name="coding_code_land_save">Save the project</string>

    <string name="coding_code_land_clear">Clear</string>

    <string name="main_activity_guide">Click on the button below \n to choose your favorite module</string>

    <string name="code_base_guide2">Swipe left and right</string>

    <string name="module3_tip_dialog">Task requirements</string>

    <string name="module3_tip_dialog_1">View the answer</string>

    <string name="contact_us_chinese">Contact us</string>
    <string name="contact_us_english">Contact Us</string>
    <string name="privacy_chinese">User Agreement and Privacy Policy</string>
    <string name="privacy_english">User Agreement and Privacy Policy</string>

    <string name="contact_us_information_chinese">感谢亲爱的您使用“编程学院”，目前这款APP是免费且无广告的，我们诚恳地希望您分享给更多的孩子来学习趣味编程！我们是大连理工大学的儿童编程APP的开发团队，您有任何交流事项可以随时联系我们！\n联系人：李同学\n邮箱:lijunde6@foxmail.com\nGithub:JedLee6</string>
    <string name="contact_us_information_english">Thanks for using "Code Land 2", which is also free and No Ads. We sincerely hope you can share it with your friends! We are the development team from China Dalian University of Technology. If you have any problems, contact us！\nName:Jed Lee\nEmail:lijunde6@foxmail.com\nGithub:JedLee6</string>
    <string name="privacy_information_chinese">隐私政策链接 URL: https://github.com/JedLee6/CodeLand_public\n\n安卓应用《编程乐园》及《编程学院》的《用户协议与隐私政策》\n本软件尊重并保护所有使用服务用户的个人隐私权。本软件为手机本地应用，不涉及任何网络功能、不申请任何网络权限。因此本软件不会将您的个人隐私信息对外披露或向第三方提供。本软件会不时更新本隐私权政策。您在同意本软件服务使用协议之时，即视为您已经同意本隐私权政策全部内容。本隐私权政策属于本软件服务使用协议不可分割的一部分。\n1.适用范围\n在您使用本软件服务，本软件会不时更新本隐私权政策。您在同意本软件服务使用协议之时，即视为您已经同意本隐私权政策全部内容。\n2.信息披露\n本软件没有网络权限，因此不会将您的信息披露给任何个人或组织，请您放心使用。</string>
    <string name="privacy_information_english">Privacy Policy URL: https://github.com/JedLee6/CodeLand_public\n\nCode Land and Code Land2’s Privacy Policy\nOur application respects and protects the privacy of all users of the service.This software is a mobile phone local application, does not involve any network functions, do not apply for any network permissions.Therefore, the software will not disclose your personal privacy information or provide it to any third party.The software will update this privacy policy from time to time.When you agree to the use of the software services, you shall be deemed to have agreed to the entire content of this privacy policy.This privacy policy is an integral part of the software service agreement.\n1.Scope of Application\nWhen you use the software service, the software will update this privacy policy from time to time.When you agree to the use of the software services, you shall be deemed to have agreed to the entire content of this privacy policy.\n2.Information Disclosure\nThis software has no network permissions, so it will not disclose your information to any individuals or organizations, please rest assured to use.\n</string>

    <string name="cancel">Cancel</string>

    <string name="rename">Rename</string>

    <string name="enter_project_name">Enter the project name of the project</string>

    <string name="Confirm">Confirm</string>

    <string name="Agree">I agree</string>

    <string name="done">Done</string>

    <string name="again">Play again</string>

    <string name="next">Next level</string>

    <string name="success">Success</string>

    <string name="fail">Fail</string>

    <string name="no_block_in_workspace">Your workspace doesn\'t have any blocks Oh, add some blocks</string>

    <string name="contact_us">Contact us</string>

    <string name="privacy">User Agreement and Privacy Policy</string>

    <string name="no_project_selected">Sorry, you did not select an item</string>

    <string name="clear">Clear</string>

    <string name="clear_all_project">Do you want to clear all projects?</string>

    <string name="congratulation">Congratulation! You made it</string>

    <string name="fail_painting">There is something wrong with your code, look for it</string>

    <string name="delete">Delete</string>

    <string name="confirm_delete">Are you sure to delete the selected items?</string>

    <string name="over_level_tip">Little friend, you have to complete the previous level before you can challenge this.</string>

    <string name="over_level_tip_end"></string>

    <string name="look_notebook">Click here to view the knowledge of the current level</string>

    <string name="help">Novice operation help</string>

    <string name="run">Run code block</string>

    <string name="garbage_can">Drag the block of code you want to delete here</string>

    <string name="toolbox_guide">Click "Actions "to use the code block</string>

    <string name="look_answer_show">Watch the answer demo</string>

    <string name="save_project">Save the current project</string>

    <string name="load_other_project">Load other items</string>

    <string name="click_toolbox">Click on the left toolbar and drag a code block to create an item</string>

    <string name="code_result_show_here">The result of running the code block is displayed here</string>

    <string name="tip_and_answer">Current level requirements and answers</string>

    <string name="scratch_game_develop_factory">Game development factory</string>

    <string name="scratch_try_factory">Try it on</string>

    <string name="scratch_game_guide_maze"></string>

    <string name="scratch_game_guide_block">Game development tutorial</string>

    <string name="scratch_block_guide">Scratch Block Guide</string>

    <string name="scratch_game_cat">Cats Catch Mouse</string>

    <string name="scratch_animation_develop_factory">Try it on</string>

    <string name="scratch_animation_guide_maze">Animation making</string>

    <string name="scratch_animation_guide_block">Animation tutorial</string>


    <string name="scratch_hub_part_animation">Animation making</string>

    <string name="scratch_hub_part_game">Game making</string>

    <string name="scratch_hub_part_guide">Building blocks tutorial</string>

    <string name="scratch_game_mouseStealGold">Mouse Steal Gold</string>

    <string name="scratch_game_planeFight">Plane war</string>

    <string name="scratch_animation_catAndMouse">Cat and Mouse</string>

    <string name="scratch_animation_boy">Boy goes home</string>

    <string name="scratch_guide_1">Pass 1 card: Move using forward block, no required number of moves</string>

    <string name="scratch_guide_2">Level 2 card: Uses forward block movement with two moves</string>

    <string name="scratch_guide_3">Switch 3 card: move with a forward, backward, up, and down block with one step each</string>

    <string name="scratch_guide_4">Off 4 cards: Use turn right, turn left, jump, reset block activities, rotation size is unit 1, jump height is 1</string>

    <string name="scratch_guide_5">Level 5 card: Uses a click, forward block to make the character move forward one step each time it is clicked</string>

    <string name="scratch_guide_6">Level 6 card: uses Send message, receive message, forward block to realize that every time a message is sent, the character moves forward one step, note the orange message</string>

    <string name="scratch_guide_7">Scratch7 card: use to talk, zoom in, zoom out, and resize chunks while implementing corresponding functions</string>

    <string name="scratch_guide_8">Scratch8 card: uses a hide and display block, performing the corresponding function in turn</string>

    <string name="scratch_guide_9">Off 9 cards : contact using sound blocks</string>

    <string name="scratch_guide_10">Off 10 card: Use the wait, forward block to make the character move forward after waiting for 5 seconds</string>

    <string name="scratch_guide_11">Off 11 card: using loop, set speed, forward block to make the loop move forward one quick step four times</string>

    <string name="scratch_guide_12">Scratch_12 card: with infinite loop, forward block, to move all the way forward</string>
    <string name="save">Save</string>
    <string name="load_project">Load</string>


</resources>

