<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:orientation="horizontal"
    >
    <Button
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="25"
        android:id="@+id/hub_part1"
        android:textSize="7sp"
        android:text="@string/scratch_hub_part_animation"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"/>
    <Button
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="25"
        android:textSize="7sp"
        android:id="@+id/hub_part2"
        android:text="@string/scratch_hub_part_game"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"/>
    <Button
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="20"
        android:textSize="7sp"
        android:id="@+id/hub_part3"
        android:text="@string/scratch_hub_part_guide"
        />

</LinearLayout>