<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="#000000">
    <!--我们可以在guidance布局中设定与MainActivity中一样大小的控件，如Button,
        （1）android:background="全透明背景图片"
        （2）去掉android:text，这样我们的控件就在这层view中透明到下面的一层vie中
        （3）在NewbieGuide.with()里面的setOnPageChangedListener重写方法
        onPageChanged添加切换了该页面后的点击事件，代码写成与MainActivity中
        的一样点击事件，如：intent跳转到另一个Activity
        -->
    <!--android:background="@mipmap/transparbackground"-->

    <!--<Button-->
        <!--android:id="@+id/guide_vo_finish"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:background="@mipmap/transparbackground"-->
        <!--/>-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/textview_base_blockly_actvitiy_newbie_guide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="right"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/tip_and_answer"/>

        <TextView
            android:id="@+id/textview_base_blockly_actvitiy_newbie_guide3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="100dp"
            android:layout_alignParentBottom="true"
            android:text="@string/run"/>
        <TextView
            android:id="@+id/textview_base_blockly_actvitiy_newbie_guide4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="right"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="50dp"
            android:text="@string/garbage_can"/>
        <TextView
            android:id="@+id/textview_base_blockly_actvitiy_newbie_guide5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_alignParentBottom="true"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="50dp"
            android:text="@string/click_toolbox"/>
        <TextView
            android:id="@+id/textview_base_blockly_actvitiy_newbie_guide6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="50dp"
            android:text="@string/code_result_show_here"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                app:srcCompat="@mipmap/block_merge_2"
                android:layout_gravity="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>