<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/background_module3">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        >
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/button_cancel"
            android:textColor="@color/white"
            android:background="@mipmap/icon_back"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/record_text"
            />
        <Button
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_rename"
            android:text="@string/rename"
            android:textSize="10dp"
            android:textColor="@color/white"
            android:background="@drawable/button_fillet_orange"
            />
        <Button
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_clear"
            android:text="@string/coding_code_land_clear"
            android:textSize="10dp"
            android:textColor="@color/white"
            android:background="@drawable/button_fillet_orange"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_load"
            android:text="@string/coding_code_land_load"
            android:textSize="10dp"
            android:textColor="@color/white"
            android:background="@drawable/button_fillet_orange"
            />
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/record_list_1"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:background="@mipmap/dialog"
        android:fadeScrollbars="false"
        />
</LinearLayout>
