<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <Button
            android:id="@+id/blockly_fbtn_show"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="top"
            android:layout_margin="5dp"
            android:background="@mipmap/icon_list"
            android:alpha="0.7"
            />
        <include layout="@layout/blockly_first_workspace"/>

        <Button
            android:id="@+id/enlighten_look_notebook"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:layout_gravity="right"
            android:background="@mipmap/icon_bulb"
            android:alpha="0.7"/>

        <Button
            android:id="@+id/enlighten_help"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:layout_marginTop="40dp"
            android:layout_marginRight="5dp"
            android:background="@mipmap/icon_help"
            android:alpha="0.7"
            />

        <Button
            android:id="@+id/blockly_fbtn_run"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom|right"
            android:layout_margin="5dp"
            android:background="@mipmap/icon_run"
            android:alpha="0.7"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="start"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/blockly_fbtn_continue"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:background="@mipmap/icon_continue"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:layout_gravity="center_vertical"
                android:text="@string/button_continue"
                android:textColor="#fff"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/blockly_fbtn_again"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:background="@mipmap/icon_again"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:layout_gravity="center_vertical"
                android:text="@string/button_again"
                android:textColor="#fff"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/blockly_fbtn_exit"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:background="@mipmap/icon_close"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:layout_gravity="center_vertical"
                android:text="@string/button_exit"
                android:textColor="#fff"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            >
            <Button
                android:id="@+id/blockly_fbtn_music"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:background="@mipmap/music_on"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:layout_gravity="center_vertical"
                android:text="@string/button_music"
                android:textColor="#fff"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/blockly_fbtn_help"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:background="@mipmap/icon_help"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:layout_gravity="center_vertical"
                android:text="@string/button_help"
                android:textColor="#fff"
                />
        </LinearLayout>
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>
